--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2502,7 +2502,7 @@ body {
   background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)), url("../../images/banner.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   border-top: 0;
   display: -ms-flexbox;
   height: 15rem !important;
