--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url(font-awesome.min.css);
-@import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
+@import url("https://cdn.jsdelivr.net/npm/computer-modern@0.1.0/cmun-typewriter.min.css");
 /*
 	Industrious by TEMPLATED
 	templated.co @templatedco
@@ -105,7 +105,7 @@ body {
   color: #444444; }
 
 body, input, select, textarea {
-  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  font-family: "Computer Modern Typewriter", "Courier New", monospace;
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.65; }
